tests/ui/const-generics/associated-const-bindings/dyn-compat-unspecified-assoc-consts.stderr
error[E0191]: the value of the associated type `K` in `Trait` must be specified
  --> $DIR/dyn-compat-unspecified-assoc-consts.rs:20:18
   |
LL |     const K: usize;
   |     -------------- `K` defined here
...
LL | struct Store(dyn Trait);
   |                  ^^^^^ help: specify the associated type: `Trait<K = Type>`

error[E0191]: the value of the associated type `K` in `Trait` must be specified
  --> $DIR/dyn-compat-unspecified-assoc-consts.rs:24:21
   |
LL |     const K: usize;
   |     -------------- `K` defined here
...
LL | type DynTrait = dyn Trait;
   |                     ^^^^^ help: specify the associated type: `Trait<K = Type>`

error[E0191]: the value of the associated type `K` in `Trait` must be specified
  --> $DIR/dyn-compat-unspecified-assoc-consts.rs:15:16
   |
LL |     const K: usize;
   |     -------------- `K` defined here
...
LL |     let _: dyn Trait;
   |                ^^^^^ help: specify the associated type: `Trait<K = Type>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0191`.
